# LEP

data/lep/samples/: glove25.csv
include/lep/: decoder.hpp  encoder.hpp
test/: CMakeLists.txt  test_lep_sample.cpp
